--- a/sass/main.scss
+++ b/sass/main.scss
@@ -126,7 +126,7 @@ h3 .flow-text {
   color: rgb(73, 73, 73);
 }
 
-// Tabs & Modals //
+// Tabs & Modals & Cards //
 // ==========================================================================
 
 .tabs .tab a.active {
